Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 4.039 devel

***   Fix arrayed interfaces, broke in 4.038 (#2468). [Josh Redford]

****  Fix combining different-width parameters (#2484). [abirkmanis]


* Verilator 4.038 2020-07-11

**    Versions 4.038 and 4.040 are planned to be the final versions that will
      support pre-C++11 compilers. Please move to C++11 or newer compilers.

***   Support VPI access to parameters and localparam. [Ludwig Rogiers]

***   Support parsing (not elaboration, yet) of UVM.

****  Add new UNSUPPORTED error code to replace most previous Unsupported: messages.

****  With --bbox-unsup continue parsing on many (not all) UVM constructs.

****  Support for-loop increments with commas.

****  Support $swrite with arbitrary arguments.

****  Support $writememb (#2450). [Fan Shupei]

****  Fix OS X, Free BSD, and -m32 portability issues. [Geza Lore]

****  Fix to flush FST trace on termination due to $stop or assertion failure.

****  Fix part select error when multipling by power-of-two (#2413). [Conor McCullough]

****  Fix division exception (#2460) [Kuoping Hsu]


* Verilator 4.036 2020-06-06

**    OPT_FAST is now -Os by default. See the BENCHMARKING & OPTIMIZATION part
      of the manual if you experience issues with compilation speed.

***   Configure now enables SystemC if it is installed as a system headers,
      e.g. with 'apt-get install systemc-dev'.

***   Add --waiver-output flag that writes a verilator config file (.vlt) with
      waivers to the warnings emitted during a Verilator run.

***   Support verilator_coverage --write-info for lcov HTML reports.
      Line Coverage now tracks all statement lines, not just branch lines.

***   --output-split is now on by default. VM_PARALLEL_BUILDS is set by
      default iff the --output-split caused an actual file split to occur.
      --output-split-cfuncs and --output-split-ctrace now default to the